desktop app + subscriptions progress + v1.2.3
-(deployed already) fix stibee webhook 500 (permission)
-add crossfade function
-missing korean translations across app
-progress on subscriptions but added feature flag to keep it hidden for now
-fix midi record bug (tony test)
-allow more zoom out scale on timeline
-when open a midi clip, it will center approximately to where notes are (rather than at very top by default)
-bug fixes: some waveforms not appearing for a saved project on open
-bpm and stretch mode changes should be undoable
-adjusted waveform height of audio clips to be more accurate like daw
-add audio clip split feature at playhead
-when clip volume gets adjusted, then waveform height is adjusted accordingly
-add 'normalize' toggle in audio clips popup option
-fix stretch clip bug when source is same as tempo, but it gets slowed anyways
-add project key setting (in tempo pill) and it gets sent as project context in AI chats

-OpenAI TPM limit shouldn't be interpreted as app user rate limit (number of prompts), so fixed that bug from showing if LLM-side TPM gets reached
